@@ -18,6 +18,7 @@
 - Fixed bug about string compare instead of numeric in ini_set
 - Added quick upgrade functionality (automatic)
 - Added purge logs functionality in maintenance
+- Fixed bug about importing lesson with glossary terms
 
 === Version 3.6.2 build 6550 ===
 - Added new automatic importing functionality
